src/test/compile-fail/fields_with_same_name.mmtn
// { "compile_status": "fail" }

struct Foo {
    bar: u64,
    bar: u64,
}

fn main() -> u64 {
    0
}
